AC_INIT(v4l-utils.spec.in)

V4L_UTILS_VERSION=0.9.0-test

dnl ---------------------------------------------------------------------
dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_LANG_C
AC_PROG_MAKE_SET
AC_HEADER_STDC

dnl ---------------------------------------------------------------------
dnl Directories

AC_ARG_WITH(libv4l1subdir, AC_HELP_STRING([--with-libv4l1subdir=DIR], [set libv4l1 library subdir [default=libv4l]]),
   libv4l1subdir=$withval, libv4l1subdir="libv4l")

AC_ARG_WITH(libv4l2subdir, AC_HELP_STRING([--with-libv4l2subdir=DIR], [set libv4l2 library subdir [default=libv4l]]),
   libv4l2subdir=$withval, libv4l2subdir="libv4l")

AC_ARG_WITH(libv4lconvertsubdir, AC_HELP_STRING([--with-libv4lconvertsubdir=DIR], [set libv4lconvert library subdir [default=libv4l]]),
   libv4lconvertsubdir=$withval, libv4lconvertsubdir="libv4l")

dnl ---------------------------------------------------------------------
dnl Options

AC_ARG_ENABLE(libv4l,
  [  --disable-libv4l        disable dynamic libv4l compilation],
  [case "${enableval}" in
     yes | no ) WITH_LIBV4L="${enableval}" ;;
     *) AC_MSG_ERROR(bad value ${enableval} for --disable-ctemplate) ;;
   esac],
  [WITH_LIBV4L="yes"]
)

AC_ARG_ENABLE(v4l-utils,
  [  --disable-v4l-utils     disable v4l-utils compilation],
  [case "${enableval}" in
     yes | no ) WITH_V4LUTILS="${enableval}" ;;
     *) AC_MSG_ERROR(bad value ${enableval} for --disable-ctemplate) ;;
   esac],
  [WITH_V4LUTILS="yes"]
)

dnl ---------------------------------------------------------------------
dnl Substitute vars
AC_SUBST(V4L_UTILS_VERSION)
AC_SUBST(WITH_LIBV4L)
AC_SUBST(WITH_V4LUTILS)
AC_SUBST(libv4l1subdir)
AC_SUBST(libv4l2subdir)
AC_SUBST(libv4lconvertsubdir)

dnl ---------------------------------------------------------------------
dnl read Makefile.in and write Makefile
AC_OUTPUT(Makefile)
AC_OUTPUT(Make.rules)
