if LINUX_OS
SUBDIRS = test
else
SUBDIRS = freebsd
endif

EXTRA_DIST = \
	parse-sniffusb2.pl \
	parse_tcpdump_log.pl \
	parse-usbsnoop.php \
	usbmon2usbsnoop.pl \
	v4l_rec.pl \
	\
	az6007 \
	cx231xx \
	cx25821 \
	em28xx \
	m920x \
	pci_traffic \
	qv4l2-qt3 \
	saa7134 \
	sn9c201 \
	tm6000 \
	usb_parse
