if LINUX_OS
SUBDIRS = test
else
SUBDIRS = freebsd
endif

if WITH_GCONV
SUBDIRS += gconv
endif

if WITH_GCONV
SUBDIRS += gconv
endif

EXTRA_DIST = \
	parse-sniffusb2.pl \
	parse_tcpdump_log.pl \
	parse-usbsnoop.php \
	usbmon2usbsnoop.pl \
	v4l_rec.pl \
	\
	af9035 \
	au0828 \
	cobalt-ctl \
	az6007 \
	cx231xx \
	cx25821 \
	dib0700 \
	em28xx \
	m920x \
	pci_traffic \
	saa7134 \
	sn9c201 \
	tm6000 \
	usb_parse
